# msml_ljmu

./: MSML - Final Thesis - Presentation.pptx  MSML-1-finetune-flant5-small-sumx_50k_data.ipynb  MSML_1_finetune_flant5_small_sumx_50k_data (1).ipynb  README.md  model_comparison_finetune_20k_results.csv  model_comparison_results.csv  msml_1_finetune_flant5_small_sumx_50k_data.py  pyproject.toml
misc/: MSML_1_finetune_flant5_small_sumx_20k.ipynb  rouge_comparison_finetune_20k.csv
notebooks/: news_data_exploration_and_prompt_engineering.ipynb
notebooks/finetune/: flant5_finetune_with_cnn_dataset.py
results/: fine-tuned-model-evaluation-metrics.csv  fne-tuned-final-metric.csv  peft-model-evaluation-metrics.csv
src/dataset_loading/: hugging_face_source_code_for_dataset_retrieval.py
src/notebooks/: evaluation_metrics.ipynb
src/peft/: flan_t5_peft_lora.py
