[tool.poetry]
name = "flant5-summarization"
version = "0.1.0"
description = ""
authors = ["nbljain <nitinbljain@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.9.1"
datasets = "^3.6.0"
transformers = {extras = ["torch"], version = "^4.51.3"}
tokenizers = "^0.21.1"
evaluate = "^0.4.3"
bert-score = "^0.3.13"
rouge-score = "^0.1.2"
sentencepiece = "^0.2.0"
huggingface-hub = "^0.31.2"
torch = "^2.7.0"
black = "^25.1.0"
isort = "^6.0.1"
peft = "^0.15.2"
accelerate = "^1.7.0"
bitsandbytes = "^0.45.5"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
